--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
     <main>
         <div class="container-upload-image">
             <div class="container-image">
-                <img src="./img/imagem1.png" alt=""
-                class="main-image">
+                <img src="./img/imagem1.png" alt="" class="main-image">
             </div>
             <button>Carregar imagem</button>
-            <div class="container-imagem-nome">
+            <div class="container-image-nome">
                 <p>image.projeto.png</p>
                 <img src="./img/close.svg" alt="">
             </div>
@@ -83,8 +82,8 @@
                     </li>
                 </ul>
                 <div class="container-botoes">
-                    <button>Descartar</button>
-                    <button>Publicar</button>
+                    <button class="botao-descartar">Descartar</button>
+                    <button class="botao-publicar">Publicar</button>
                 </div>
             </form>
         </div>
