adicionando interação no botão carregar imagem

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <div class="container-image">
                 <img src="./img/imagem1.png" alt="" class="main-image">
             </div>
-            <button>Carregar imagem</button>
+            <button id="upload-btn" class="upload-btn">Carregar imagem</button>
+            <input type="file" id="image-upload" accept="image/" style="display: none">
             <div class="container-image-nome">
                 <p>image.projeto.png</p>
                 <img src="./img/close.svg" alt="">
@@ -89,7 +90,7 @@
         </div>
     </main>
 
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
