--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img src="./img/imagem1.png" alt="" class="main-image">
             </div>
             <button id="upload-btn" class="upload-btn">Carregar imagem</button>
-            <input type="file" id="image-upload" accept="image/" style="display: none">
+            <input type="file" id="image-upload" accept="image/*" style="display: none">
             <div class="container-image-nome">
                 <p>image.projeto.png</p>
                 <img src="./img/close.svg" alt="">
