Verificando tags de forma assincrona

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li> <!-- Item da lista -->
                     <a href="#" class="link-destaque" >
                         Publicar
-                    </a> <!-- Tag âncora, direciona para alguma parte da página, neste caso ela não tem função ainda -->
+                    </a> <!-- Tag âncora, direciona para alguma parte da página, neste caso ela não tem direciona ainda -->
                 </li>
                 <li>
                     <a href="#">
