Adicionando imagem padrão do formulário

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main> <!-- Tag semântica que indica o conteúdo principal de uma página -->
         <div class="container-upload-image"> <!-- Indica o container que irá envolver a imagem e suas ações -->
             <div class="container-image"> <!-- Container que irá envolver a imagem -->
-                <img src="./img/imagem1.png" alt="" class="main-image"> 
+                <img src="./img/image-icon.png" alt="" class="main-image"> 
             </div>
             <button id="upload-btn" class="upload-btn">Carregar imagem</button> <!-- Botão para o carregamento da imagem -->
             <input type="file" id="image-upload" accept="image/*" style="display: none"> <!-- Input oculto para realizar o carregamento da imagem na página -->
